--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "expo": "^27.0.1",
     "react": "16.3.1",
+    "react-icons-kit": "^1.1.7",
     "react-native": "~0.55.2",
-    "react-navigation": "^2.12.1"
+    "react-navigation": "^2.13.0"
   }
 }
