--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.3.1",
     "react-icons-kit": "^1.1.7",
     "react-native": "~0.55.2",
+    "react-native-elements": "^0.19.1",
     "react-navigation": "^2.13.0"
   }
 }
